# localsend-handheld

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: handheld-artifacts.yml
app/: desktop_main.cpp
app/handheld/include/localsend/: handheld_app.hpp
app/handheld/src/: handheld_app.cpp
cmake/: LocalSendCoreSources.cmake  LocalSendHandheldUi.cmake
docs/: https-plan.md
include/localsend/: app_service.hpp  config.hpp  constants.hpp  device_selection.hpp  device_store.hpp  discovery.hpp  file_browser.hpp  http.hpp  json.hpp  protocol.hpp  safe_path.hpp  security.hpp  status_format.hpp  tls.hpp  transfer.hpp
platform/: README.md
platform/psv/: CMakeLists.txt
platform/psv/src/: core_smoke.cpp  core_smoke_compat.cpp  main.c  main.cpp  mbedtls_vita_config.h  psv_entropy.cpp
platform/switch/: CMakeLists.txt  Makefile
platform/switch/src/: main.cpp  ui_main.cpp
scripts/: build_handheld_artifacts.sh  deploy_handheld_artifacts.sh  smoke_desktop_send.sh
src/core/: app_service.cpp  config.cpp  device_selection.cpp  device_store.cpp  discovery.cpp  file_browser.cpp  http.cpp  json.cpp  protocol.cpp  safe_path.cpp  security.cpp  status_format.cpp  tls.cpp  transfer.cpp
tests/: core_tests.cpp
